--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -133,9 +133,9 @@
 				最新の17系列です。16系列とは完全互換を維持したままですので、安心して移行していただければと思います。
 			</p>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine/0.99.0(2024/4/12):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-0.99.0.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-0.99.0.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine/0.99.0 (Suika2/17.91) (2024/4/12):<br>
+<!-- LATEST-EXE --><a href="/dl/suika2-17.91.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/suika2-17.91.dmg">Mac版 Polaris Engine</a><br>
 			<br>
 			<p>
         <br>
