web: release Polaris

--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -130,7 +130,7 @@
 			<br>
 			<h4>最新版</h4>
 			<p>
-				最新の17系列です。16系列とは完全互換を維持したままですので、安心して移行していただければと思います。
+				最新版です。Suika2とは完全互換を維持したままです。
 			</p>
 			<p>
 <!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine/0.99.0 (Suika2/17.91) (2024/4/12):<br>
@@ -138,15 +138,15 @@
 <!-- LATEST-DMG --><a href="/dl/suika2-17.91.dmg">Mac版 Polaris Engine</a><br>
 			<br>
 			<p>
+				転生前 Suika2/17.91:<br>
+				<a href="/dl/suika2-17.91.exe">Windows版</a><br>
+				<a href="/dl/suika2-17.91.dmg">Mac版</a><br>
+			<br>
+			<p>
         <br>
         <a href="#relnote">リリース情報はこちら</a>
 			</p>
 			<br>
-		</div>
-
-		<!-- Windows -->
-		<div class="tab-pane fade" id="windows-tab-pane" role="tabpanel" aria-labelledby="windows-tab" tabindex="0">
-			<a href="https://apps.microsoft.com/detail/XP99CQV05PR79W?cid=PCCongratsBnr&hl=ja-jp&gl=JP"><img src="/img/banners/pro-windows.png" style="width:min(90vw, 500px);"></a>
 		</div>
 
 		<!-- Linux/Chromebook -->
@@ -193,7 +193,7 @@
 					</li>
 					<li>アイコン
 						<ul>
-							<li>game.exe: 龍龍</li>
+							<li>デフォルトアイコン: 龍龍</li>
 						</ul>
 					</li>
 					<li>利用ライブラリ
@@ -373,6 +373,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> <li>Mac版は今回含まれていません。</li> </ul> </li>
 				</ul>
       </div>
 			<!-- 以前の更新 -->
