--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -239,6 +239,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
 <li>Polaris Engine/0.99.0 2024/4/12 <ul> <li>Rebranded</li> </ul> </li>
 			</div>
 		</div>
