--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -101,9 +101,9 @@
 			<br>
 			<h4>The Official Distributions</h4>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->Latest Polaris Engine/0.99.0 (Polaris Engine 0.99) (2024/4/12):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-0.99.0.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-0.99.9.dmg">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.1 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.1.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.1.dmg">Download Polaris Engine for Mac</a><br>
 			</p>
 			<br>
 		</div>
@@ -239,6 +239,10 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.1 2024/4/12 <ul> <li>Fixed typo in config.txt</li> </ul> </li>
+<li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
+<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
+<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
 <li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
 <li>Polaris Engine/0.99.0 2024/4/12 <ul> <li>Rebranded</li> </ul> </li>
 			</div>
