--- a/web/index.html
+++ b/web/index.html
@@ -304,7 +304,7 @@
 
 <h2 class="spacer">ユーザーサポート</h2>
 <p>
-	Discordにユーザーコミュニティーを作りました。初心者でも気軽に質問できます。<br>
+	有志によるDiscordユーザーコミュニティーがあります。初心者でも気軽に質問できます。<br>
 	<a class="btn btn-primary mb-3" href="https://discord.gg/Xh9mFwr4E8">ユーザーコミュニティーに参加</a>
 </p>
 <p>
