freebsd: fixed build files

--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -135,7 +135,7 @@
 			<p>
 <!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.2 (Engine):<br>
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.2.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.2.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-DMG -->Mac版 Polaris Engine (Appleが公証中)<br>
 			<br>
 			<p>
 				転生前 Suika2/17.91:<br>
