--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -103,7 +103,7 @@
 			<p>
 <!-- LATEST-VERSION-AND-DATE -->Latest 1.0.2 (Engine):<br>
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.2.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.2.dmg">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-DMG -->Download Polaris Engine for Mac (Apple is now notalizing)<br>
 			</p>
 			<br>
 		</div>
@@ -242,10 +242,6 @@
 <li>Polaris Engine 1.0.2 2024/4/13 <ul> <li>Fixed a bug of names of variables</li> </ul> </li>
 <li>Polaris Engine 1.0.1 2024/4/12 <ul> <li>Fixed typo in config.txt</li> </ul> </li>
 <li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
-<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
-<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
-<li>Polaris Engine/1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> </ul> </li>
-<li>Polaris Engine/0.99.0 2024/4/12 <ul> <li>Rebranded</li> </ul> </li>
 			</div>
 		</div>
   </div>
