build: fixed make setup for Ubuntu

--- a/web/dl/material/index.html
+++ b/web/dl/material/index.html
@@ -140,7 +140,7 @@
 				<h3>縦書きUI Photoshopデータ</h3>
 				<p>
 					コア開発者・あさつきによる縦書きUIの、Photoshopデータです。<br>
-					<a href="/dl/material/tategaki_cg.zip"><img src="/img/icons/zip.png" width="48"> Photoshop ZIPダウンロード</a>
+					<a href="/dl/material/tategaki_cg.zip">Photoshop ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -161,7 +161,7 @@
 				<br>
 				<h3>旧国際版サンプルゲームとPhotoshop素材</h3>
 				<p>
-					<img src="/img/icons/zip.png" width="48"><br>
+					<br>
 					<a href="/dl/material/complete-demo.zip">コンプリート版デモ</a><br>
 					<a href="/dl/material/gui-psd.zip">システムGUI (By MaxMorgan)</a><br>
 					<a href="/dl/material/gui-menu-psd.zip">タイトル画面のGUI (By heath)</a>
@@ -186,7 +186,7 @@
 				<h3>和風システムグラフィック</h3>
 				<p>
 					大塚旭さんご提供の和風GUIです。<br>
-					<a href="/dl/material/wafuu.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					<a href="/dl/material/wafuu.zip">スクリプト ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -208,7 +208,7 @@
 				<h3>和風(青)システムグラフィック</h3>
 				<p>
 					大塚旭さんご提供の和風(青)GUIです。<br>
-					<a href="/dl/material/wafuu-blue.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					<a href="/dl/material/wafuu-blue.zip">スクリプト ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -229,8 +229,8 @@
 				<br>
 				<h3>『森』のUI素材</h3>
 				<p>
-					ソローさんご提供の『森の中で』のGUI素材	<a href="https://plicy.net/GamePlay/156139">作品はこちら</a><br>
-					<a href="/dl/material/mori_demo.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					コア開発者・ソロー提供の『森の中で』のGUI素材	<a href="https://plicy.net/GamePlay/156139">作品はこちら</a><br>
+					<a href="/dl/material/mori_demo.zip">スクリプト ZIPダウンロード</a>
 					<a href="/dl/material/mori_gui_psd.zip">Photoshopデータ ダウンロード</a>
 				</p>
 			</div>
@@ -244,7 +244,7 @@
 				<h3>縦UIテンプレート</h3>
 				<p>
 					Ronronさんご提供の縦GUIテンプレートです。<br>
-					<a href="/dl/material/916-ronron-V002.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					<a href="/dl/material/916-ronron-V002.zip">スクリプト ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -257,7 +257,7 @@
 				<h3>クリックアイコン</h3>
 				<p>
 					三力滴さんご提供のクリックアイコンです。<br>
-					<a href="/dl/material/miryokuteki-click.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a>
+					<a href="/dl/material/miryokuteki-click.zip">ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -280,9 +280,9 @@
 					</a>
 				</div>
 				<br>
-				<h3>名前入力のフリー素材/サンプル [Type2 - あさつきさん作, フリー利用可能]</h3>
+				<h3>名前入力のフリー素材(あさつき)</h3>
 				<p>
-					<a href="/dl/sample/name-demo-type2.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					<a href="/dl/material/name-demo.zip">スクリプト ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -307,9 +307,9 @@
 				<br>
 				<h3>『雨』エフェクト</h3>
 				<p>
-					ソローさんご提供の雨エフェクトです<br>
-					<a href="/dl/material/sorow-rain.zip"><img src="/img/icons/zip.png" width="48"> プラグイン ZIPダウンロード</a>
-					<a href="/dl/material/sorow-rain-SampleGame.zip"><img src="/img/icons/zip.png" width="48"> サンプルゲーム ダウンロード</a>
+					コア開発者・ソロー提供の雨エフェクトです<br>
+					<a href="/dl/material/sorow-rain.zip">プラグイン ZIPダウンロード</a>
+					<a href="/dl/material/sorow-rain-SampleGame.zip"> サンプルゲーム ダウンロード</a>
 				</p>
 			</div>
 
@@ -330,10 +330,10 @@
 				<br>
 				<h3>『雪』エフェクト</h3>
 				<p>
-					ソローさんご提供の雪エフェクトです<br>
-					<a href="/dl/material/sorow-snow.zip"><img src="/img/icons/zip.png" width="48"> サンプルゲーム ZIPダウンロード</a>
-					<a href="/dl/material/sorow-snow-full.zip"><img src="/img/icons/zip.png" width="48"> プラグイン(1280x720) ZIPダウンロード</a>
-					<a href="/dl/material/sorow-snow-half.zip"><img src="/img/icons/zip.png" width="48"> プラグイン(画像1/2圧縮) ダウンロード</a>
+					コア開発者・ソロー提供の雪エフェクトです<br>
+					<a href="/dl/material/sorow-snow.zip">サンプルゲーム ZIPダウンロード</a>
+					<a href="/dl/material/sorow-snow-full.zip">プラグイン(1280x720) ZIPダウンロード</a>
+					<a href="/dl/material/sorow-snow-half.zip">プラグイン(画像1/2圧縮) ダウンロード</a>
 				</p>
 			</div>
 
@@ -354,8 +354,8 @@
 				<br>
 				<h3>ユニバーサルトランジションのルール画像</h3>
 				<p>
-					ソローさんご提供のルール画像です<br>
-					<a href="/dl/material/sorow-rule.zip"><img src="/img/icons/zip.png" width="48"> 画像詰め合わせ ZIPダウンロード</a>
+					コア開発者・ソロー提供のルール画像です<br>
+					<a href="/dl/material/sorow-rule.zip">画像詰め合わせ ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -371,7 +371,7 @@
 				<p>
 					Ronronさんご提供のキラキラエフェクトです。
 				</p>
-				<a href="/dl/material/kirakira-effect-ronron-v2.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a><br>
+				<a href="/dl/material/kirakira-effect-ronron-v2.zip">ZIPダウンロード</a><br>
 			</div>
 
 		</div>
@@ -395,7 +395,7 @@
 				<br>
 				<h3>キャラを動かす簡易アニメ演出のサンプル</h3>
 				<p>
-					<a href="/dl/sample/animation.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					<a href="/dl/sample/animation.zip">スクリプト ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -406,12 +406,12 @@
 				<div style="width: 100%; text-align: center;">
 					<img style="width: 50%; height: 50%;" src="/img/screenshots/micchi.png" alt="ミッチーにおまかせ">
 				</div>
-				<h3>『ミッチーにおまかせ』(マイマイさん)</h3>
+				<h3>『ミッチーにおまかせ』(マイマイ)</h3>
 				<p>
 					Suika2/11系列までの全演出の利用例で、スクリプトの中身が公開されています<br>
 					Suika2時代の初期版から最新版まで対応してきた唯一のゲームです。<br>
-					<a href="/dl/material/micchi-15.40.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a><br>
-					<a href="/dl/sample/name-demo-type3.zip"><img src="/img/icons/zip.png" width="48"> 名前入力のみのサンプル [Type3]</a>
+					<a href="/dl/material/micchi-15.40.zip">スクリプト ZIPダウンロード</a><br>
+					<a href="/dl/sample/name-demo-type3.zip">名前入力のみのサンプル [Type3]</a>
 				</p>
 			</div>
 
@@ -434,7 +434,7 @@
 				<p>
 					つまりクリッカブルマップです。<br>
 					場所移動やストーリーのフローチャートを実現できます。<br>
-					<a href="/dl/sample/gallery-demo.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a>
+					<a href="/dl/sample/gallery-demo.zip">スクリプト ZIPダウンロード</a>
 				</p>
 			</div>
 
@@ -446,7 +446,7 @@
 				<p>
 					松野さんご提供のスタッフロールサンプルです。
 				</p>
-				<a href="/dl/material/staff-roll.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a><br>
+				<a href="/dl/material/staff-roll.zip">ZIPダウンロード</a><br>
 			</div>
 
 			<hr>
@@ -456,7 +456,7 @@
 				<h3>マクロの利用例</h3>
 				<p>
 					マクロを作成するサンプルです。<br>
-					<a href="/dl/sample/macro-demo.zip"><img src="/img/icons/zip.png" width="48"> スクリプト ZIPダウンロード</a><br>
+					<a href="/dl/sample/macro-demo.zip">スクリプト ZIPダウンロード</a><br>
 				</p>
 			</div>
 
@@ -483,13 +483,9 @@
 				<p>
 					レトロゲームでボイスに使われているようなビープ音です。マイミアマイマイ様提供。<br>
 					各音程の用意があり、レトロゲーム風にできます。<br>
-					<a href="/dl/material/VOICE_BEEP_SET_2.1.zip"><img src="/img/icons/zip.png" width="64"> ボイスビープ音のダウンロード</a><br>
+					<a href="/dl/material/VOICE_BEEP_SET_2.1.zip">ボイスビープ音のダウンロード</a><br>
 					サンプルゲームの制作はクロウズの嫁つるさん
 				</p>
-				<figure>
-					<figcaption>サンプルビープ音:</figcaption>
-					<audio controls src="/dl/music/maimai/beep-sample.mp3"></audio>
-				</figure>
 			</div>
 
 			<hr>
@@ -511,8 +507,7 @@
 				<p>
 					鏡読みさんご提供のBGM素材です。<a href="https://www.freem.ne.jp/dl/win/31531">作品はこちらです</a>
 				</p>
-				<a href="/dl/material/VtuberBGM.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a><br>
-				<figure><figcaption>サンプル</figcaption><audio controls src="/dl/music/vtuber/001.mp3"></audio></figure>
+				<a href="/dl/material/VtuberBGM.zip">ZIPダウンロード</a><br>
 			</div>
 		</div>
 		<!-- End of Sound -->
@@ -524,9 +519,9 @@
 			<img style="width: 50%; height: 50%;" src="/img/screenshots/sorow-chara-01.png" alt="ソローさんのキャラ素材 女子生徒">
 			<h3>キャラ1</h3>
 			<p>
-				ソローさんご提供のキャラ素材です。
+				コア開発者・ソロー提供のキャラ素材です。
 			</p>
-			<a href="/dl/material/sorow-chara-01.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a><br>
+			<a href="/dl/material/sorow-chara-01.zip">ZIPダウンロード</a><br>
 
 			<hr>
 			<br>
@@ -534,9 +529,9 @@
 			<img style="width: 50%; height: 50%;" src="/img/screenshots/sorow-chara-02.png" alt="ソローさんのキャラ素材 男子生徒">
 			<h3>キャラ2</h3>
 			<p>
-				ソローさんご提供のキャラ素材です。
+				コア開発者・ソロー提供のキャラ素材です。
 			</p>
-			<a href="/dl/material/sorow-chara-02.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a><br>
+			<a href="/dl/material/sorow-chara-02.zip">ZIPダウンロード</a><br>
 
 			<hr>
 			<br>
@@ -555,9 +550,9 @@
 				<br>
 				<h3>キャラ素材サンプル</h3>
 				<p>
-					ソローさんご提供のキャラ素材を使ったサンプルです。
+					コア開発者・ソロー提供のキャラ素材を使ったサンプルです。
 				</p>
-				<a href="/dl/material/sorow-chara-sample.zip"><img src="/img/icons/zip.png" width="48"> ZIPダウンロード</a><br>
+				<a href="/dl/material/sorow-chara-sample.zip">ZIPダウンロード</a><br>
 			</div>
 		</div>
 		<!-- End of Chara -->
