Fixed a bug of name config

--- a/web/dl/material/index.html
+++ b/web/dl/material/index.html
@@ -410,7 +410,7 @@
 				<p>
 					Suika2/11系列までの全演出の利用例で、スクリプトの中身が公開されています<br>
 					Suika2時代の初期版から最新版まで対応してきた唯一のゲームです。<br>
-					<a href="/dl/material/micchi-15.40.zip">スクリプト ZIPダウンロード</a><br>
+					<a href="/dl/material/micchi-latest.zip">スクリプト ZIPダウンロード</a><br>
 					<a href="/dl/sample/name-demo-type3.zip">名前入力のみのサンプル [Type3]</a>
 				</p>
 			</div>
