--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -133,8 +133,8 @@
 				最新版です。Suika2とは完全互換を維持したままです。
 			</p>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.2 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.2.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.5 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.5.exe">Windows版 Polaris Engine</a><br>
 <!-- LATEST-DMG -->Mac版 Polaris Engine (Appleが公証中)<br>
 			<br>
 			<p>
@@ -373,6 +373,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.5 2024/4/14 <ul> <li>変数名のコンフィグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.2 2024/4/13 <ul> <li>変数名のバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.1 2024/4/12 <ul> <li>コンフィグの誤字を修正</li> </ul> </li>
 <li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> <li>Mac版は今回含まれていません。</li> </ul> </li>
