--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -101,9 +101,9 @@
 			<br>
 			<h4>The Official Distributions</h4>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.6 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.6.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.6.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.9 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.9.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.9.exe">Download Polaris Engine for Mac</a><br>
 			</p>
 			<br>
 		</div>
@@ -239,6 +239,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.9 2024/4/14 <ul> <li>Improved config.txt</li> </ul> </li>
 <li>Polaris Engine 1.0.6 2024/4/14 <ul> <li>Released a Mac version</li> </ul> </li>
 <li>Polaris Engine 1.0.5 2024/4/14 <ul> <li>Fixed a bug of name config</li> </ul> </li>
 <li>Polaris Engine 1.0.2 2024/4/13 <ul> <li>Fixed a bug of names of variables</li> </ul> </li>
