--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -133,9 +133,9 @@
 				最新版です。Suika2とは完全互換を維持したままです。
 			</p>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.9 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.9.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.9.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.10 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.10.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.10.dmg">Mac版 Polaris Engine</a><br>
 			<br>
 			<p>
 				転生前 Suika2/17.91:<br>
@@ -373,6 +373,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.10 2024/4/14 <ul> <li>公式Visual Studio Code拡張の追加 (VScodeからPolaris Engine Extensionをインストール。既存ゲームでは新規テンプレ内の.vscodeフォルダをコピーで有効になります)</li> </ul> </li>
 <li>Polaris Engine 1.0.9 2024/4/14 <ul> <li>コンフィグの改善</li> </ul> </li>
 <li>Polaris Engine 1.0.6 2024/4/14 <ul> <li>Mac版の公開</li> </ul> </li>
 <li>Polaris Engine 1.0.5 2024/4/14 <ul> <li>変数名のコンフィグを修正</li> </ul> </li>
