--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -101,9 +101,9 @@
 			<br>
 			<h4>The Official Distributions</h4>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.10 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.10.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.10.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.11 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.11.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.11.exe">Download Polaris Engine for Mac</a><br>
 			</p>
 			<br>
 		</div>
@@ -239,6 +239,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.11 2024/4/14 <ul> <li>Changed the logo</li> </ul> </li>
 <li>Polaris Engine 1.0.10 2024/4/14 <ul> <li>Added the official Visual Studio Code extension (Please install Polaris Engine Extension from VScode, then copy .vscode folder from a new template)</li> </ul> </li>
 <li>Polaris Engine 1.0.9 2024/4/14 <ul> <li>Improved config.txt</li> </ul> </li>
 <li>Polaris Engine 1.0.6 2024/4/14 <ul> <li>Released a Mac version</li> </ul> </li>
