--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -133,9 +133,9 @@
 				最新版です。Suika2とは完全互換を維持したままです。
 			</p>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.13 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.13.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.13.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.14 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.14.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.14.dmg">Mac版 Polaris Engine</a><br>
 			<br>
 			<p>
 				転生前 Suika2/17.91:<br>
@@ -387,6 +387,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.14 2024/4/15 <ul> <li>フォントファイルを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.13 2024/4/15 <ul> <li>コンフィグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.12 2024/4/14 <ul> <li>日本語ノベルテンプレートのルビサイズを修正</li> </ul> </li>
 
