--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -101,9 +101,9 @@
 			<br>
 			<h4>The Official Distributions</h4>
 			<p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.13 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.13.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.13.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.14 (Engine):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.14.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.14.exe">Download Polaris Engine for Mac</a><br>
 			</p>
 			<br>
 		</div>
@@ -239,6 +239,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.14 2024/4/15 <ul> <li>Fixed the font files</li> </ul> </li>
 <li>Polaris Engine 1.0.13 2024/4/15 <ul> <li>Fixed the configs</li> </ul> </li>
 <li>Polaris Engine 1.0.12 2024/4/14 <ul> <li>Fixed the ruby size of the Japanese Novel template</li> </ul> </li>
 
