--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -102,137 +102,96 @@
 
 <!-- ------------------------- -->
 
-<div class="download">
+<br>
+<h4>最新版</h4>
+<p>
+	最新版です。Suika2とは完全互換を維持したままです。
+</p>
+<p>
+	<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.14 (Engine):<br>
+	<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.14.exe">Windows版 Polaris Engine</a><br>
+	<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.14.dmg">Mac版 Polaris Engine</a><br>
+	<a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
+	<br>
+	<a href="#relnote">リリース情報はこちら</a>
+</p>
+<p>
+	転生前 Suika2/17.91:<br>
+	<a href="/dl/suika2-17.91.exe">Windows版</a><br>
+	<a href="/dl/suika2-17.91.dmg">Mac版</a><br>
+	<br>
+</p>
 
-	<!-- Tabs -->
-	<ul class="nav nav-pills" id="myTab" role="tablist">
-		<!-- Windows -->
-		<li class="nav-item" role="presentation">
-			<button class="nav-link active" id="preview-tab" data-bs-toggle="tab" data-bs-target="#preview-tab-pane" type="button" role="tab" aria-controls="preview-tab-pane" aria-selected="true">Downloads</button>
-		</li>
+<br>
+<hr>
+<br>
 
-		<!-- Linux/Chromebook -->
-		<li class="nav-item" role="presentation">
-			<button class="nav-link" id="linux-tab" data-bs-toggle="tab" data-bs-target="#linux-tab-pane" type="button" role="tab" aria-controls="linux-tab-pane" aria-selected="false">Linux/Chromebook</button>
-		</li>
-
-		<!-- Credit -->
-		<li class="nav-item" role="presentation">
-			<button class="nav-link" id="credit-tab" data-bs-toggle="tab" data-bs-target="#credit-tab-pane" type="button" role="tab" aria-controls="credit-tab-pane" aria-selected="false">Credit</button>
-		</li>
-	</ul>
-
-	<!-- Contents of Tabs -->
-	<div class="tab-content" id="myTabContent">
-
-		<!-- Self Hosted Distribution -->
-		<div class="tab-pane fade show active" id="preview-tab-pane" role="tabpanel" aria-labelledby="preview-tab" tabindex="0">
-			<br>
-			<h4>最新版</h4>
-			<p>
-				最新版です。Suika2とは完全互換を維持したままです。
-			</p>
-			<p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.14 (Engine):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.14.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.14.dmg">Mac版 Polaris Engine</a><br>
-			<br>
-			<p>
-				転生前 Suika2/17.91:<br>
-				<a href="/dl/suika2-17.91.exe">Windows版</a><br>
-				<a href="/dl/suika2-17.91.dmg">Mac版</a><br>
-			<br>
-			<p>
-        <br>
-        <a href="#relnote">リリース情報はこちら</a>
-			</p>
-			<br>
-		</div>
-
-		<!-- Linux/Chromebook -->
-		<div class="tab-pane fade" id="linux-tab-pane" role="tabpanel" aria-labelledby="linux-tab" tabindex="0">
-			<div style="margin-left:1em;margin-top:1em;">
-				<h3>Linux/Chromebook</h3>
-				<p>お手軽:</p>
-				<pre><code>wget https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh && sh ./install-polaris-engine.sh<br>poaris-engine</code></pre>
-				<p>本格的:</p>
-				<pre><code>git clone https://github.com/ktabata/polaris-engine.git<br>cd polaris-engine<br>make<br>sudo make install<br>polaris-engine</code></pre>
-			</div>
-		</div>
-
-		<!-- Credit -->
-		<div class="tab-pane fade" id="credit-tab-pane" role="tabpanel" aria-labelledby="credit-tab" tabindex="0">
-			<div style="margin-left:1em;margin-top:1em;">
-				<h3>クレジット</h3>
-				<p>テンプレートゲームの作成にあたり、プロ・アマチュアを問わず、才能溢れる素晴しいクリエイタの皆様にご参加いただいております。(敬称略)</p>
+<h3>クレジット</h3>
+<p>テンプレートゲームの作成にあたり、プロ・アマチュアを問わず、才能溢れる素晴しいクリエイタの皆様にご参加いただいております。(敬称略)</p>
+<ul>
+	<li>UI/UX
+		<ul>
+			<li>デフォルト: SOrow (@sorow_fts)</li>
+			<li>縦書き小説: あさつき (@ootukasegoka)</li>
+		</ul>
+	</li>
+	<li>キャラクタデザイン
+		<ul>
+			<li>みどり: ぽにこ (@gigzagu123)</li>
+		</ul>
+	</li>
+	<li>声の出演
+		<ul>
+			<li>日本語: しぐれるぅ。 (@sigureruu)</li>
+			<li>英語: カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
+		</ul>
+	</li>
+	<li>音楽
+		<ul>
+			<li>BGM: 80</li>
+		</ul>
+	</li>
+	<li>エフェクト
+		<ul>
+			<li>雨と雪: SOrow (@sorow_fts)</li>
+		</ul>
+	</li>
+	<li>アイコン
+		<ul>
+			<li>デフォルトアイコン: 龍龍</li>
+		</ul>
+	</li>
+	<li>利用ライブラリ
+		<ul>
+			<li>画像
 				<ul>
-					<li>UI/UX
-						<ul>
-							<li>デフォルト: SOrow (@sorow_fts)</li>
-							<li>縦書き小説: あさつき (@ootukasegoka)</li>
-						</ul>
-					</li>
-					<li>キャラクタデザイン
-						<ul>
-							<li>みどり: ぽにこ (@gigzagu123)</li>
-						</ul>
-					</li>
-					<li>声の出演
-						<ul>
-							<li>日本語: しぐれるぅ。 (@sigureruu)</li>
-							<li>英語: カレン・ヘドリック <a href="https://www.karenvoice.jp/">Karen Voice</a></li>
-						</ul>
-					</li>
-					<li>音楽
-						<ul>
-							<li>BGM: 80</li>
-						</ul>
-					</li>
-					<li>エフェクト
-						<ul>
-							<li>雨と雪: SOrow (@sorow_fts)</li>
-						</ul>
-					</li>
-					<li>アイコン
-						<ul>
-							<li>デフォルトアイコン: 龍龍</li>
-						</ul>
-					</li>
-					<li>利用ライブラリ
-						<ul>
-							<li>画像
-								<ul>
-									<li>libpng: Copyright (C) 2000-2002, 2004, 2006-2016, Glenn Randers-Pehrson and the original authors. All rights reserved.</li>
-									<li>jpeg9: copyright (C) 1991-2022, Thomas G. Lane, Guido Vollbeding. All rights reserved.</li>
-									<li>libwebp: Copyright (C) 2010, Google Inc. All rights reserved.</li>
-								</ul>
-							</li>
-							<li>音声
-								<ul>
-									<li>libvorbis: Copyright (C) 2002-2015, Xiph.org Foundation. All rights reserved.</li>
-								</ul>
-							</li>
-							<li>フォント
-								<ul>
-									<li>FreeType2: Copyright (C) 1996-2002, 2006 by David Turner, Robert Wilhelm, and Werner Lemberg. All rights reserved.</li>
-								</ul>
-							</li>
-							<li>ogg/png/webp/woff2ファイル用の内部的な依存ライブラリ
-								<ul>
-									<li>libogg: Copyright (C) 2002, Xiph.org Foundation. All rights reserved.</li>
-									<li>zlib: Copyright (C) 1995-2013 Jean-loup Gailly and Mark Adler. All rights reserved.</li>
-									<li>bzip2: Copyright (C) 1996-2010 Julian R Seward. All rights reserved.</li>
-									<li>Brotli: Copyright (c) 2009, 2010, 2013-2016 by the Brotli Authors. All rights reserved.</li>
-								</ul>
-							</li>
-							<li>Unityエクスポートに限り、Unityを使用 (家庭用ゲーム機専用)</li>
-						</ul>
-					</li>
+					<li>libpng: Copyright (C) 2000-2002, 2004, 2006-2016, Glenn Randers-Pehrson and the original authors. All rights reserved.</li>
+					<li>jpeg9: copyright (C) 1991-2022, Thomas G. Lane, Guido Vollbeding. All rights reserved.</li>
+					<li>libwebp: Copyright (C) 2010, Google Inc. All rights reserved.</li>
 				</ul>
-			</div>
-		</div>
-	</div>
-</div>
+			</li>
+			<li>音声
+				<ul>
+					<li>libvorbis: Copyright (C) 2002-2015, Xiph.org Foundation. All rights reserved.</li>
+				</ul>
+			</li>
+			<li>フォント
+				<ul>
+					<li>FreeType2: Copyright (C) 1996-2002, 2006 by David Turner, Robert Wilhelm, and Werner Lemberg. All rights reserved.</li>
+				</ul>
+			</li>
+			<li>ogg/png/webp/woff2ファイル用の内部的な依存ライブラリ
+				<ul>
+					<li>libogg: Copyright (C) 2002, Xiph.org Foundation. All rights reserved.</li>
+					<li>zlib: Copyright (C) 1995-2013 Jean-loup Gailly and Mark Adler. All rights reserved.</li>
+					<li>bzip2: Copyright (C) 1996-2010 Julian R Seward. All rights reserved.</li>
+					<li>Brotli: Copyright (c) 2009, 2010, 2013-2016 by the Brotli Authors. All rights reserved.</li>
+				</ul>
+			</li>
+			<li>Unityエクスポートに限り、Unityを使用 (家庭用ゲーム機専用)</li>
+		</ul>
+	</li>
+</ul>
 
 <br>
 <hr>
@@ -280,6 +239,20 @@
 			<li>macOS 12 Monterey</li>
 			<li>macOS 13 Ventura</li>
 			<li>macOS 14 Sonoma</li>
+		</ul>
+	</li>
+</ul>
+<br>
+<h3>Linux/BSD</h3>
+<ul>
+	<li>開発ツール
+		<ul>
+			<li>OS: Linux / FreeBSD / NetBSD
+		</ul>
+	</li>
+	<li>出力ゲーム
+		<ul>
+			<li>OS: Linux / FreeBSD / NetBSD
 		</ul>
 	</li>
 </ul>
@@ -338,11 +311,14 @@
 		</ul>
 	</li>
 </ul>
-
 <br>
-
 <h3>Webブラウザ版</h3>
 <ul>
+	<li>開発ツール (まだ制作中)
+		<ul>
+			<li><a href="/vls/">Google Chromeのみ対応</a></li>
+		</ul>
+	</li>
 	<li>出力ゲーム
 		<ul>
 			<li>Google Chrome</li>
@@ -352,16 +328,9 @@
 			<li>Mozilla Firefox</li>
 		</ul>
 	</li>
-	<li>開発ツール (まだ制作中)
-		<ul>
-			<li><a href="/vls/">Google Chromeのみ対応</a></li>
-		</ul>
-	</li>
 </ul>
-
 <br>
-
-<h3>家庭用ゲーム機版(Unity)</h3>
+<h3>家庭用ゲーム機版 (Unityエクスポート)</h3>
 <ul>
 	<li>出力ゲーム
 		<ul>
@@ -372,7 +341,9 @@
 	</li>
 </ul>
 
+<br>
 <hr>
+<br>
 
 <a name="relnote"><h2 class="spacer">リリースノート - 変更の一覧</h2></a>
 <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -390,15 +361,14 @@
 <li>Polaris Engine 1.0.14 2024/4/15 <ul> <li>フォントファイルを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.13 2024/4/15 <ul> <li>コンフィグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.12 2024/4/14 <ul> <li>日本語ノベルテンプレートのルビサイズを修正</li> </ul> </li>
-
 <li>Polaris Engine 1.0.11 2024/4/14 <ul> <li>テンプレートのロゴを変更</li> <li>縦書きテンプレートにフォントライセンス画像を追加</li> </ul> </li>
-<li>Polaris Engine 1.0.10 2024/4/14 <ul> <li>公式Visual Studio Code拡張の追加 (VScodeからPolaris Engine Extensionをインストール。既存ゲームでは新規テンプレ内の.vscodeフォルダをコピーで有効になります)</li> </ul> </li>
+<li>Polaris Engine 1.0.10 2024/4/14 <ul> <li>公式Visual Studio Code拡張の追加 (VScodeからPolaris Engine Extensionをインストール。既存ゲームでは新規テンプレ内の.vscodeフォルダをコピーも必要です)</li> </ul> </li>
 <li>Polaris Engine 1.0.9 2024/4/14 <ul> <li>コンフィグの改善</li> </ul> </li>
-<li>Polaris Engine 1.0.6 2024/4/14 <ul> <li>Mac版の公開</li> </ul> </li>
+<li>Polaris Engine 1.0.6 2024/4/14 <ul> <li>Mac版の追加</li> </ul> </li>
 <li>Polaris Engine 1.0.5 2024/4/14 <ul> <li>変数名のコンフィグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.2 2024/4/13 <ul> <li>変数名のバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.0.1 2024/4/12 <ul> <li>コンフィグの誤字を修正</li> </ul> </li>
-<li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> <li>Mac版は今回含まれていません。</li> </ul> </li>
+<li>Polaris Engine 1.0.0 2024/4/12 <ul> <li>Polaris Engine 1.0.0</li> <li>Mac版はまだ含まれていません。</li> </ul> </li>
 				</ul>
       </div>
 			<!-- 以前の更新 -->
