--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -104,29 +104,21 @@
 
 <br>
 <h4>最新版</h4>
+<p>Suika2とは完全互換を維持したままです。</p>
 <p>
-	最新版です。Suika2とは完全互換を維持したままです。
-</p>
-<p>
-	<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.14 (Engine):<br>
-	<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.14.exe">Windows版 Polaris Engine</a><br>
-	<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.14.dmg">Mac版 Polaris Engine</a><br>
-	<a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
-	<br>
-	<a href="#relnote">リリース情報はこちら</a>
-</p>
-<p>
-	転生前 Suika2/17.91:<br>
-	<a href="/dl/suika2-17.91.exe">Windows版</a><br>
-	<a href="/dl/suika2-17.91.dmg">Mac版</a><br>
-	<br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.14 (2024/4/15):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.14.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.14.dmg">Mac版 Polaris Engine</a><br>
+<a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
+<br>
+<a href="#relnote">リリースノートはこちら</a>
 </p>
 
 <br>
 <hr>
 <br>
 
-<h3>クレジット</h3>
+<h4>クレジット</h4>
 <p>テンプレートゲームの作成にあたり、プロ・アマチュアを問わず、才能溢れる素晴しいクリエイタの皆様にご参加いただいております。(敬称略)</p>
 <ul>
 	<li>UI/UX
@@ -330,9 +322,9 @@
 	</li>
 </ul>
 <br>
-<h3>家庭用ゲーム機版 (Unityエクスポート)</h3>
+<h3>家庭用ゲーム機版</h3>
 <ul>
-	<li>出力ゲーム
+	<li>出力ゲーム (Unityエクスポート)
 		<ul>
 			<li>Nintendo Switch</li>
 			<li>PlayStation 4/5</li>
@@ -345,7 +337,7 @@
 <hr>
 <br>
 
-<a name="relnote"><h2 class="spacer">リリースノート - 変更の一覧</h2></a>
+<a name="relnote"><h2 class="spacer">リリースノート</h2></a>
 <div class="accordion" id="accordionPanelsStayOpenExample">
   <!-- 直近の更新 -->
 	<div class="accordion-item">
@@ -381,7 +373,7 @@
 				<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
 					<div class="accordion-body">
 						<ul>
-							<li>Polaris Engine/0.99.0 2024/4/12 <ul> <li>Suika2から移行</li> </ul> </li>
+							<li>Polaris Engine/0.99.0 2024/4/12 <ul> <li>Suika2から転生</li> </ul> </li>
 						</ul>
 					</div>
 				</div>
