--- a/web/index.html
+++ b/web/index.html
@@ -308,7 +308,7 @@
 	<a class="btn btn-primary mb-3" href="https://discord.gg/Xh9mFwr4E8">ユーザーコミュニティーに参加</a>
 </p>
 <p>
-	SNSでは、<a href="https://twitter.com/">X</a>	でハッシュタグ <code>#polaris-engine</code> を付けてポストしていただくことで、見つけ次第リプライします。<br>
+	SNSでは、<a href="https://twitter.com/">X</a>	でハッシュタグ <code>#PolarisEngine</code> を付けてポストしていただくことで、見つけ次第リプライします。<br>
 	腕に自身のある方は、GitHubでご連絡ください。
 </p>
 
