--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>最新版</h4>
 <p>Suika2とは完全互換を維持したままです。</p>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.17 (1.0.17):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.17.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.17.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.0.18 (1.0.18):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.18.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.18.dmg">Mac版 Polaris Engine</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
 <br>
 <a href="#relnote">リリースノートはこちら</a>
@@ -350,6 +350,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.18 2024/4/20 <ul> <li>自動リリースをあきらめて署名を復活</li> </ul> </li>
 <li>Polaris Engine 1.0.17 2024/4/16 <ul> <li>英語コンフィグファイルの修正(TODO:英語化)</li> </ul> </li>
 <li>Polaris Engine 1.0.16 2024/4/16 <ul> <li>Windowsで画面サイズが足りない場合に全画面で起動するように変更</li> </ul> </li>
 <li>Polaris Engine 1.0.14 2024/4/15 <ul> <li>フォントファイルを修正</li> </ul> </li>
