--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.18 (1.0.18):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.18.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.18.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.0.19 (1.0.19):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.0.19.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.0.19.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.0.19 2024/4/21 <ul> <li>Fixed a bug of Ciel system</li> <li>Always show the right top button on the Editor</li> </ul> </li>
 <li>Polaris Engine 1.0.18 2024/4/20 <ul> <li>The auto-release system was retired and the code signings revived</li> </ul> </li>
 <li>Polaris Engine 1.0.17 2024/4/16 <ul> <li>Modernized the English config files (TODO: translate)</li> </ul> </li>
 <li>Polaris Engine 1.0.16 2024/4/16 <ul> <li>Changed to export macOS Xcode project instead of dmg</li> </ul> </li>
